Fix T78444: Duplicate "From Radius" in Cast Modifier UI

This button was meant to be "Use Transform"